@@ -1,3 +1,8 @@
+2011-04-20  Pedro Alves  <pedro@codesourcery.com>
+
+	* gdb.base/maint.exp: Test that "maint print registers" works
+	without a running program.
+
 2011-04-15  Thiago Jung Bauermann  <bauerman@br.ibm.com>
 
 	* gdb.base/watchpoint.exp (test_inaccessible_watchpoint): Don't
